@@ -269,6 +269,8 @@ The following extensions are migrated into MediaWiki 1.14:
 * Specify apple-touch-icon before favicon in HTML head section to make the Konqueror
   browser correctly use the latter
 * (bug 15717) Set $separatorTransformTable for language 'eu'
+* (bug 15605) Enabled $datePreferences for language 'hr'. Added standard date
+  preferences.
 
 === API changes in 1.14 ===
 
